--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>~hedup</title>
-	<link rel="stylesheet" href="index_files/style.css">
+	<link rel="stylesheet" href="style.css">
 	</head><body>
 		<div class="page-outer">
 			<div class="page-inner">
