--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>~hedup</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="index_files/style.css">
 	</head><body>
 		<div class="page-outer">
 			<div class="page-inner">
@@ -14,7 +14,7 @@
 
 				<article>
 					<h1><a href="#a20141213" name="a20141213">Tue 26 Jun 2018</a></h1>
-					<p>testing testing sample text test</p>
+					<p><a href="2018_2k_cipari_studd.pdf">Study work in Digital Communications</a>Yada yada yada, test test test. Sample text goes on and on.</p>
 				</article>
 
 				<footer>
