--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 				<article>
 					<h1><a href="#a20141213" name="a20141213">Tue 26 Jun 2018</a></h1>
-					<p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_cipari_studd.pdf">Study work in Digital Communications</a>Yada yada yada, test test test. Sample text goes on and on.</p>
+					<p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_cipari_studd.pdf">Study work in Digital Communications</a></p>
+					<p>In this work I perform necessary calculations, describe source coding algorithm and describe channel coder/decoder in abstract logic device with shown logic structure. </p>
 				</article>
 
 				<footer>
