--- a/index.html
+++ b/index.html
@@ -1,27 +1,143 @@
 <!DOCTYPE html>
 <html><head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>~hedup</title>
-	<link rel="stylesheet" href="index_files/style.css">
-	</head><body>
-		<div class="page-outer">
-			<div class="page-inner">
+      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+      <title>hedup</title>
+      <link rel="stylesheet" href="index_files/style.css">
+   </head>
+   <body>
+      <div class="page-outer">
+	 <div class="page-inner">
+	    <h1 class="page-title">hedup</h1>
 
-				<h1 class="page-title">~hedup</h1>
+	    <!--============================================-->
 
+	    <article>
+	       <h1><a href="#a20180607" name="20180607">Course work in Digital Communications [2018-06-07]</a></h1>
+	       <p>In this work I was tasked to perform source coding, channel coding and draw a device logic for a Hamming group code coder/decoder. Here I learned to use KiCAD PCB design software to draw the schematics of my logic devices.</p>
+	       <p>Tools:<ul>
+		  <li>KiCAD for device schematics</li>
+		  <li>Matlab for calculations and diagrams</li>
+		  <li>LaTex for final document composition</li>
+		  <li><a href="https://www.draw.io">https://www.draw.io</a> for block diagram</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_cipari_studd.pdf">2018_2k_cipari_studd.pdf</a></p>
+	    </article>
 
-				<!-- journal -->
+	    <!--============================================-->
 
-				<article>
-					<h1><a href="#a20141213" name="a20141213">Tue 26 Jun 2018</a></h1>
-					<p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_cipari_studd.pdf">Study work in Digital Communications</a></p>
-					<p>In this work I perform necessary calculations, describe source coding algorithm and describe channel coder/decoder in abstract logic device with shown logic structure. </p>
-				</article>
+	    <article>
+	       <h1><a href="#a20180606" name="20180606">Lab report: error performance of BASK, BFSK and BPSK [2018-06-06]</a></h1>
+	       <p>Here we performed binary amplitude, frequency and phase shift keying manipulation of source signal and measured their error performances.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_cipari_lab1.pdf">2018_2k_cipari_lab1.pdf</a></p>
+	    </article>
 
-				<footer>
-				</footer>
+	    <!--============================================-->
 
-			</div></div><!-- /page -->
+	    <article>
+	       <h1><a href="#a20180521" name="20180521">Lab report: digital-to-analog and analog-to-digital converters [2018-05-21]</a></h1>
+	       <p>Here we tried out DACs and ADCs built with oldie LM741 opamps and measured their parameters.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>GIMP for graphics</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_analog_lab3.pdf">2018_2k_analog_lab3.pdf</a></p>
+	    </article>
 
-	</body></html>
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180406" name="20180406">Lab report: opamp based functional devices [2018-04-06]</a></h1>
+	       <p>Here we built and checked out adders, integrators, differentiators, comparators and signal generators based on LM741 opamp.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>QUCS for schematics</li>
+		  <li>GIMP for graphics</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_analog_lab2.pdf">2018_2k_analog_lab2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180311" name="20180311">Presentation: opamp architecture, dissection of LM741 [2018-03-11]</a></h1>
+	       <p>I researched the general architecture of OPAMP devices and presented the general principles of transistor based amplification. I learned about IC constraints and how they affected the evolution of OPAMPS.</p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_analog_prez.pdf">2018_2k_analog_prez.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180310" name="20180310">Lab report: operational amplifier [2018-03-10]</a></h1>
+	       <p>In this lab we had our first chance to put our hands onto actual OPAMP - LM741. We measured it's main parameters and checked if they correspond with manufacturers datasheet.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>QUCS for schematics</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2018_2k_analog_lab1.pdf">2018_2k_analog_lab1.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180117" name="20180117">Lab report: alternating frequency signal spectrum analysis [2018-01-17]</a></h1>
+	       <p>Here I generated alternating frequency signal and checked out how to display it usign 4D (3D+color) graph.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for signal generation, calculations, diagrams and graphs</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_signali_lab4.pdf">2017_2k_signali_lab4.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180115" name="20180115">Lab report: Digital Filters [2018-01-15]</a></h1>
+	       <p>Here I checked out how Digital Filters work. I learned how to design filters using MatLab <font face="courier">filterDesigner</font> from DSP system Toolbox. I created non-recursive and recursive filters and checked out how they affect harmonic input signal.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for filter design, signal generation, calculations, diagrams and graphs</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_signali_lab3.pdf">2017_2k_signali_lab3.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180114" name="20180114">Lab report: Discrete Signals and discrete Fourier Transform [2018-01-14]</a></h1>
+	       <p>In this lab work I generated discrete signal and then performed Descrete Fourier analysis and then back Fourier synthesis to check if I can get the same signal back. I also learned about importance of Nyquist criteria when we sample descrete signals.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for signal generation, calculations, diagrams and graphs</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_signali_lab2.pdf">2017_2k_signali_lab2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20180102" name="20180102">Lab report: Rectangular Impulses and their Bandwidth [2018-01-02]</a></h1>
+	       <p>In this lab work I generated rectangular impulse and then manually performed Fourier analysis. I learned how to measure the bandwidth of these kinds of signals.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for impulse generation, calculations, diagrams and graphs</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_signali_lab1.pdf">2017_2k_signali_lab1.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <footer>
+	       <!--reserved-->
+	    </footer>
+	 </div><!-- /page-inner -->
+      </div><!-- /page-outer -->
+   </body>
+</html>
 
