--- a/index.html
+++ b/index.html
@@ -133,6 +133,206 @@
 
 	    <!--============================================-->
 
+	    <article>
+	       <h1><a href="#a20171229" name="20171229">Lab report: Processes in long transmission lines [2017-12-29]</a></h1>
+	       <p>Here we performed experiment with relatively long transmission line of around 20cm with high frequency AC voltage. We observed reflection phenomena and learned about importance of impedance matching.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_kedes_lab3.pdf">2017_2k_kedes_lab3.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171221" name="20171221">Lab report: FET - field effect transistor [2017-12-21]</a></h1>
+	       <p>In this lab we learned how to use FET to control current using voltage at it's gate. We also took it's drain current characteristic curves and differential resistance curves.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_pusvad_lab4.pdf">2017_2k_pusvad_lab4.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171220" name="20171220">Lab report: BJT in dynamic mode [2017-12-20]</a></h1>
+	       <p>In this lab we took characteristic curves of bipolar-junction-transistor (BJT) when using it in dynamic mode - with AC and different resistances. We learned that we can use resistor to control current amplification coefficient. We used here both common emitter and common collector variants.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_pusvad_lab3.pdf">2017_2k_pusvad_lab3.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171211" name="20171211">Lab report: Transient processes in RC, RL, and RCL circuits [2017-12-11]</a></h1>
+	       <p>Here we measured step responses of RC, RL, and RCL circuits and compared them with our previous theoretical calculations. We learned about the important concept of transient period, which determines many device characteristics. We also learned that we can control it with certain choice of components (R, C, and L).</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_kedes_lab2.pdf">2017_2k_kedes_lab2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171124" name="20171124">Report: Flash memory [2017-11-24]</a></h1>
+	       <p>In this report I researched what place does Flash memory hold in the hierarchy of computer memory, what was the historical development of ROM that led to Flash and what are the general principles of it's technical realization. I learned about it's underlying important floating gate transistor and also it's general architectural design principles.</p>
+	       <p>Tools:<ul>
+		  <li>Google slides for hierarchy diagram</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_pusvad_ref2.pdf">2017_2k_pusvad_ref2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171031" name="20171031">Report: Light Emitting Diodes [2017-10-31]</a></h1>
+	       <p>This report is on the theory and latest parameters of LEDs. I made here introduction level research of LED solid-state physics. I learned about an important natural phenomena which can be controlled in semiconductor devices - carrier recombination which generates light photons. This report mostly went about the solid-state physics side of things, but there is a bit at the end about the implementation of LEDs in various circuits and about different packages they come in, as well as what parameters they hold.</p>
+	       <p>Tools:<ul>
+		  <li>LaTex for document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_pusvad_ref1.pdf">2017_2k_pusvad_ref1.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171028" name="20171028">Lab report: Bipolar transistor in static mode [2017-10-28]</a></h1>
+	       <p>In this lab work we measured the static characteristics of our BJT and compared them to it's datasheet.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_pusvad_lab2.pdf">2017_2k_pusvad_lab2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171025" name="20171025">Lab report: Rectifier and Zener diodes [2017-10-25]</a></h1>
+	       <p>In this lab work we made basic rectifier and Zener diode circuits. We learned about how we can use diodes to disallow wrong current direction. We also learned how we can expliot the avalanche breakdown region of a diode to stabilize voltage between two points in the circuit.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_pusvad_lab1.pdf">2017_2k_pusvad_lab1.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171015" name="20171015">Lab report: Resonant circuit [2017-10-15]</a></h1>
+	       <p>In this lab we measured the characteristic curves of a simple RCL resonant circuit. We learned that we can control the resonant frequency by choosing certain component values.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_kedes_lab1.pdf">2017_2k_kedes_lab1.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171013" name="20171013">Presentation: Signal processing and machine learning [2017-10-13]</a></h1>
+	       <p>In order to hone my English speaking skills I chose to present about signal processing and how possibly in the future we might use more and more machine learning techniques to do it. It's probably useless to publish bare presentation here, but nevertheless here it is.</p>
+	       <p>Tools:<ul>
+		  <li>I made this presentation in Google Slides</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_english_prez.pdf">2017_2k_english_prez.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20171002" name="20171002">Reading: Standatization institutions and application of ETSI recommendations [2017-10-02]</a></h1>
+	       <p>This is a summary of our reading we had to do on the subject of international and local standartization organizations and what are their tasks and authority.</p>
+	       <p>Tools:<ul>
+		  <li>LaTex for document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_2k_merijumi_konsp.pdf">2017_2k_merijumi_konsp.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20170515" name="20170515">Lab report: Two-port network and its coefficients [2017-05-15]</a></h1>
+	       <p>In this lab we used as an example a simple two-port network to demonstrate how it is possible to ignore the internal structure of such network when conncting it to other devices, and using it's given current and voltage parameters. Here we learned extremely important concept in electronics - abstraction, which allows us to build increasingly complex devices without a necessity to know all its internal composition.</p>
+	       <p>Tools:<ul>
+		  <li>LaTex for document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_1k_ETP_lab4.pdf">2017_1k_ETP_lab4.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20170501" name="20170501">Lab report: Vector diagrams of AC circuits [2017-05-01]</a></h1>
+	       <p>In this lab we learned how we can use vector diagrams of currents and voltages to analize AC circuits. We calculated theoretical bahavior of our circuits and then measured them. It turned out our measurements were quite precise.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_1k_ETP_lab3.pdf">2017_1k_ETP_lab3.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20170415" name="20170415">Homework: resistors, capacitors and coils [2017-04-15]</a></h1>
+	       <p>This homework is for Electricity & Magnetism. I also had to calculate resonance curves for parallel and series RCL circuits.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_1k_EM_md.pdf">2017_1k_EM_md.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20170401" name="20170401">Lab report: Transformer [2017-04-01]</a></h1>
+	       <p>Here we looked at a transformer with and without ferite core. We compared their parameters. We also looked at its frequency characteristic and learned how Eddy Currents affect transformer's properties.</p>
+	       <p>Tools:<ul>
+		  <li>Python for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_1k_EM_lab3.pdf">2017_1k_EM_lab3.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20170315" name="20170315">Lab report: Node and mesh circuit analysis [2017-03-15]</a></h1>
+	       <p>In this lab we experimentally confirmed that Node and Mesh methods of circuit analysis actually works.</p>
+	       <p>Tools:<ul>
+		  <li>SMath for calculations</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_1k_ETP_lab2.pdf">2017_1k_ETP_lab2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
+	    <article>
+	       <h1><a href="#a20170301" name="20170301">Lab report: Resonance [2017-03-01]</a></h1>
+	       <p>In this lab for the first time we looked at resonance phenomena in AC circuits. We calculated resonance frequency for a given circuit with known component parameters and then confirmed it with measurements.</p>
+	       <p>Tools:<ul>
+		  <li>MatLab for diagrams</li>
+		  <li>LaTex for final document composition</li>
+	       </ul></p>
+	       <p><a href="https://github.com/hedup/hedup.github.io/blob/master/index_files/2017_1k_EM_lab2.pdf">2017_1k_EM_lab2.pdf</a></p>
+	    </article>
+
+	    <!--============================================-->
+
 	    <footer>
 	       <!--reserved-->
 	    </footer>
